[tool.poetry]
name = "ezperm"
version = "0.1.1"
description = "Permissions made easy"
readme = "README.md"
license = "LICENSE.md"
homepage = "https://github.com/VojtechPetru/ezperm"
repository = "https://github.com/VojtechPetru/ezperm"
keywords = ["permissions", "django"]
authors = ["vojtech <petru.vojtech@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[tool.poetry.extras]  # https://python-poetry.org/docs/pyproject/#extras
django = ["django"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
verbose = true
line-length = 120
target_version = ['py310']
